# put-husky

./: README.md
docs/: NETWORK.md  SENSORS.md  example_output.md  index.md
husky_base/launch/: put_base.launch.py
husky_bringup/scripts/: install  put_install
husky_bringup/udev/: 41-logitech.rules
husky_control/config/: localization.yaml
husky_control/launch/: control.launch.py
put_husky_description/: CMakeLists.txt  README.md  package.xml
put_husky_description/launch/: description.launch.py
put_husky_description/urdf/: empty.urdf  put_extras.urdf  put_extras_empty.urdf.xacro  put_husky.urdf.xacro
put_husky_gazebo/: README.md  package.xml  setup.cfg  setup.py
put_husky_gazebo/launch/: gazebo.launch.py
put_husky_viz/: package.xml
put_husky_viz/launch/: view_robot.launch.py
put_husky_viz/rviz/: put.rviz
